fix scss where img was misaligned

--- a/src/styles/components/Card.scss
+++ b/src/styles/components/Card.scss
@@ -43,10 +43,7 @@
 }
 
 div.img {
-  border-radius: 3px;
-  box-sizing: border-box;
   height: 130px;
-  width: 95%;
 }
 
 .title {
